# zenith

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pre-commit
apps/uri_shortener/: CMakeLists.txt  Dockerfile  UriShortenerApp.cpp  UriShortenerApp.h  load_test.cpp  main.cpp  mock_server.cpp
apps/uri_shortener/application/use_cases/: DeleteLink.cpp  DeleteLink.h  ResolveLink.cpp  ResolveLink.h  ShortenLink.cpp  ShortenLink.h
apps/uri_shortener/config/: CMakeLists.txt  default.json  uri_shortener.proto
apps/uri_shortener/config/include/: ProtoConfigLoader.h
apps/uri_shortener/config/tests/: CMakeLists.txt  proto_config_extended_test.cpp  proto_config_loader_test.cpp  proto_config_test.cpp
apps/uri_shortener/domain/entities/: ShortLink.cpp  ShortLink.h
apps/uri_shortener/domain/errors/: DomainErrors.h
apps/uri_shortener/domain/include/: DomainErrors.h  ExpirationPolicy.h  ICodeGenerator.h  ILinkRepository.h  OriginalUrl.h  ShortCode.h  ShortLink.h
apps/uri_shortener/domain/ports/: ICodeGenerator.h  ILinkRepository.h
apps/uri_shortener/domain/src/: ExpirationPolicy.cpp  OriginalUrl.cpp  ShortCode.cpp  ShortLink.cpp
apps/uri_shortener/domain/tests/: CMakeLists.txt  delete_link_test.cpp  domain_benchmark.cpp  expiration_policy_test.cpp  original_url_test.cpp  resolve_link_test.cpp  short_code_test.cpp  short_link_test.cpp  shorten_link_test.cpp
apps/uri_shortener/domain/value_objects/: ExpirationPolicy.cpp  ExpirationPolicy.h  OriginalUrl.cpp  OriginalUrl.h  ShortCode.cpp  ShortCode.h
apps/uri_shortener/include/: IUriRepository.h  IUriService.h  MongoUriRepository.h  ObservableMessageHandler.h  ObservableRequestHandler.h  RedisUriRepository.h  UriController.h  UriMessages.h  UriService.h  UriShortenerMessageHandler.h  UriShortenerRequestHandler.h
apps/uri_shortener/infrastructure/generators/: RandomCodeGenerator.h
apps/uri_shortener/infrastructure/observability/: ObservableLinkRepository.h
apps/uri_shortener/infrastructure/persistence/: InMemoryLinkRepository.h
apps/uri_shortener/service/include/: DataServiceHandler.h  DataServiceMessages.h  DeleteLink.h  HttpDataServiceAdapter.h  IDataServiceAdapter.h  InMemoryLinkRepository.h  ObservableLinkRepository.h  ObservableMessageHandler.h  ObservableRequestHandler.h  RandomCodeGenerator.h  ResolveLink.h  ShortenLink.h  UriMessages.h  UriShortenerApp.h  UriShortenerBuilder.h  UriShortenerComponents.h  UriShortenerMessageHandler.h  UriShortenerRequestHandler.h
apps/uri_shortener/service/src/: DataServiceHandler.cpp  DeleteLink.cpp  HttpDataServiceAdapter.cpp  ObservableMessageHandler.cpp  ObservableRequestHandler.cpp  ResolveLink.cpp  ShortenLink.cpp  UriShortenerApp.cpp  UriShortenerBuilder.cpp  UriShortenerComponents.cpp  UriShortenerMessageHandler.cpp  UriShortenerRequestHandler.cpp
apps/uri_shortener/service/tests/: CMakeLists.txt  data_service_handler_test.cpp  http_data_service_adapter_test.cpp  observable_handler_test.cpp  observable_repository_test.cpp  (+2 more)
apps/uri_shortener/src/: MongoUriRepository.cpp  ObservableMessageHandler.cpp  ObservableRequestHandler.cpp  RedisUriRepository.cpp  UriController.cpp  UriService.cpp  UriShortenerMessageHandler.cpp  UriShortenerRequestHandler.cpp
apps/uri_shortener/tests/: CMakeLists.txt  app_builder_test.cpp  app_test.cpp  delete_link_test.cpp  expiration_policy_test.cpp  observable_handler_test.cpp  observable_repository_test.cpp  original_url_test.cpp  resolve_link_test.cpp  short_code_test.cpp  short_link_test.cpp  shorten_link_test.cpp  uri_shortener_gtest.cpp  uri_shortener_handlers_test.cpp
concurrency/: CMakeLists.txt
concurrency/include/: IWorkerPool.h  IoWorkerPool.h  Job.h  WorkerPool.h
concurrency/src/: IoWorkerPool.cpp  WorkerPool.cpp
concurrency/tests/: CMakeLists.txt  io_worker_pool_test.cpp  test_worker_pool.cpp
exception/: CMakeLists.txt
exception/include/exception/: AstraException.hpp  ZenithException.hpp
exception/src/: AstraException.cpp  ZenithException.cpp
exception/tests/: test_exception_unit.cpp
hfsm/: CMakeLists.txt
hfsm/include/hfsm/: Machine.hpp
hfsm/tests/: test_hfsm_unit.cpp
http1.1/client/: CMakeLists.txt
http1.1/client/src/: Http1Client.cpp
http1.1/client/tests/: test_http1.1client_unit.cpp
http1.1/server/: CMakeLists.txt
http1.1/server/src/: Http1Request.cpp  Http1Response.cpp  Http1Server.cpp
http2/nghttp2/: CMakeLists.txt  boost-1.88-compat.patch
http2/server/: CMakeLists.txt  README.md
http2/server/examples/: simple_server.cpp
http2/server/include/: Http2Request.h  Http2Response.h  Http2Server.h
http2/server/src/: Http2Request.cpp  Http2Response.cpp  Http2Server.cpp  ResponseHandle.cpp  ResponseImpl.hpp
jsonformatter/: CMakeLists.txt  README.md
jsonformatter/src/: JsonFormatter.cpp
jsonformatter/tests/: test_jsonformatter.cpp
libs/core/config/: CMakeLists.txt
libs/core/execution/: CMakeLists.txt
libs/core/json/: CMakeLists.txt
libs/core/observability/: CMakeLists.txt
libs/core/outcome/: CMakeLists.txt
libs/core/prometheus_client/: CMakeLists.txt
libs/core/resilience/: CMakeLists.txt
libs/core/service_discovery/: CMakeLists.txt
libs/core/utils/: CMakeLists.txt
libs/data/mongo_client/: CMakeLists.txt  main.cpp
libs/data/redis_client/: CMakeLists.txt
libs/data/zookeeperclient/: CMakeLists.txt
logger/: CMakeLists.txt  README.md
logger/src/: LoggerImpl.cpp
logger/tests/: test_logger.cpp
mongoclient/: CMakeLists.txt  README.md  main.cpp
mongoclient/include/: IMongoClient.h  MongoClient.h
mongoclient/mongodriver/: CMakeLists.txt
mongoclient/src/: MongoClient.cpp
mongoclient/tests/: MockMongoClient.h  mongo_integration_test.cpp  mongo_mock_test.cpp  test_mongoclient.cpp
prometheus_client/: CMakeLists.txt
prometheus_client/include/: PrometheusManager.hpp
prometheus_client/src/: PrometheusManager.cpp
prometheus_client/tests/: prometheus_gtest.cpp
zookeeperclient/: CMakeLists.txt
zookeeperclient/include/: ZookeeperClient.hpp
zookeeperclient/src/: ZookeeperClient.cpp
zookeeperclient/tests/: test_zookeeper_unit.cpp
(+504 files in other folders)
